--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "5.2.4",
     "framer-motion": "^12.4.1",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.4"
   }
 }
