--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@astrojs/react": "^4.2.0",
     "@radix-ui/react-icons": "^1.3.2",
-    "@tailwindcss/vite": "^4.0.3",
+    "@tailwindcss/postcss": "^4.0.4",
+    "@tailwindcss/vite": "^4.0.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "5.2.4",
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^12.4.1",
     "gsap": "^3.12.7",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.4"
